// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup panel Compositions BasicPopupPanel 1`] = `
"<BasicPopupPanel>
  <div className=\\"\\">
    <div className=\\"\\">
      <button type=\\"button\\" className=\\"button-two\\" onClick={[Function: onClick]}>
        Open
      </button>
      <PopupPanel id=\\"demo-id\\" isOpen={false} handleClose={[Function: handleClose]} popupRoot=\\"root\\" renderWhenClosed={false} />
    </div>
  </div>
</BasicPopupPanel>"
`;

exports[`popup panel Compositions PopupPanelConnectorDemo 1`] = `
"<PopupPanelConnectorDemo>
  <div className=\\"\\">
    <div className=\\"\\">
      <button type=\\"button\\" className=\\"button-two\\" onClick={[Function: onClick]}>
        Open
      </button>
    </div>
  </div>
</PopupPanelConnectorDemo>"
`;
